--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jan 24 18:25:21 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: copied over the newest incarnation of G_DEFINE_TYPE()
+	from glib, which type_name_ prefix parent_class variables.
+
 Sat Jan 24 06:55:57 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-cxx.cc: switch to a get_element() method for sequences,
