--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jan 24 19:14:46 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecxxplugin.h: remove TypeName argument from BSE_CXX_DECLARE_RECORD()
+	and BSE_CXX_DECLARE_SEQUENCE(), get the type names via type_name().
+
 Sat Jan 24 07:04:59 2004  Tim Janik  <timj@gtk.org>
 
 	* bseexports.h: specify the field array of boxed types directly
