--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,16 @@
+Sun Jan 25 04:41:23 2004  Tim Janik  <timj@gtk.org>
+
+	* bse-plugin-generator.cc: convert to sfidl code generator
+	factories. use "--module" factory.
+
+	* sfidl-module.h: removed (disabled) class definition.
+
+	* sfidl-module.cc: rewrote code generator into self-contained
+	language-binding object.
+
+	* sfiprimitives.[hc]: added sfi_seq_append_empty() and
+	sfi_rec_forced_get() to simplify code generation.
+
 Sat Jan 24 19:13:40 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-cxx.cc (printRecSeqImpl): remove type_name argument from
