--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Sun Jan 25 05:28:23 2004  Tim Janik  <timj@gtk.org>
+
+	* bseplugin.c: use new boxed registration functions.
+
+	* bsetype.[hc]: GType doesn't really support dynamic boxed types, so
+	register boxed types from plugins statically and plug their
+	implementations internally. tidied up pspec constructors.
+
 Sat Jan 24 19:14:46 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecxxplugin.h: remove TypeName argument from BSE_CXX_DECLARE_RECORD()
