added more test cases.
Sun Jan 25 05:49:59 2004  Tim Janik  <timj@gtk.org>

        * tests/testplugin.idl: added more test cases.

        * beast-gtk/bstutils.c: pspec constructor fixups.

svn path=/trunk/; revision=1900

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- stefan: can we optimize cxx_value_get_sequence() returns?
 - rc setting for canvas font sizes
 - record classes in c++ need to derive from GNewAllocator
 - put bstrecords.idl generated files into CLEAN files or at least MAINTAINER-CLEAN files
