--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan 25 05:49:59 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/testplugin.idl: added more test cases.
+
+	* beast-gtk/bstutils.c: pspec constructor fixups.
+
 Sat Jan 24 18:24:06 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/*.c: added type_name_ prefix to parent_class variables in
