--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 27 00:43:29 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/Makefile.am: Reenabled C++ API code.
+
 Mon Jan 26 02:45:21 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/Makefile.am: disable C++ API code which breaks again,
