--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 FIXMES:
 - func_value_get_param() take just a string
+- assign numbers to all enum values in sfidl-parser (email to stefan)
 - make sfidl/bse-plugin-generator manual pages match new/changed options
 - rc setting for canvas font sizes
 - record classes in c++ need to derive from GNewAllocator
