--- a/TODO
+++ b/TODO
@@ -3,9 +3,8 @@ FIXMES:
 - rc setting for canvas font sizes
 - bseautodoc.c: use bse_type_get_license() instead of sfi_info_string_find()
 - remove sfi_boxed_get_record_info
-- sfi_info_string_find
+- remove sfi_info_string_find
 - remove sfi_boxed_make_sequence
-- make signal arguments STATIC_SCOPE (avoid fblock copies)
 - allow inverted synth-done (i.e. suitable for gate connecitons)
 - let the ADSR provide Gate-Out
 - reset-properties sets base-volume of BseAmplifier to 100% (should be 0)
