--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 27 17:50:42 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-synthesis.texi: update links.
+
 Tue Jan 27 16:02:06 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnifferscope.[hc]: collect sniffer requests and submit
