--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 28 15:25:55 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/sfidl.1.texi: cvs copied from bse-plugin-generator.1.texi.
+
 Tue Jan 27 17:50:42 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-links-synthesis.texi: update links.
