--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Wed Jan 28 15:41:15 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/Makefile.am: added afidl.1.texi.
+
+	* docs/generated/Makefile.am: build and install sfidl.1.
+
+	* docs/sfidl.1.texi: exchange bse-plugin-generator for sfidl
+	for the most parts.
+
 Wed Jan 28 15:25:55 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/sfidl.1.texi: cvs copied from bse-plugin-generator.1.texi.
